Fri Aug 18 13:34:43 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Profile_Transport_Resolver.cpp:
          Fix for connection timeout errors introduced by Adam's commit of
          Justin's changes in Tue Aug 15 14:56:35 UTC 2006  Adam Mitz
          <mitza@ociweb.com>

Fri Aug 18 13:27:02 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * tests/Oneway_Timeouts/client.cpp:
          Eliminated warnings due to using var's without ".in()".

Fri Aug 18 09:09:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Generator_Parser*.*:
          Changed all write_* methods to return a bool instead of int, the
          return value was used as bool, so made this explicit. Also added
          more const usage when possible.

        * tao/GIOP_Message_Base.cpp:
          Use true for a bool

        * tao/GIOP_Mesage_Locate_Header.{h,inl}:
          Const improvements

        * tao/GIOP_Utils.h:
          Removed stuff that was not used

        * tao/GIOP_Utils.cpp:
          Removed this file, not used at all

        * tao/tao.mpc:
          Removed GIOP_Utils.cpp

Fri Aug 18 07:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Fixed incorrect method name in debug macro. When the parsing of the
          request header has failed, throw the marshal exception directly, don't
          try to process the service context and assign translators, we just
          don't know at this stage if that is safe to do, so don't do that.
          Also in parse_request_id do the demarshaling of the service contexts
          and the request id in two seperate steps, if the demarshaling of the
          service context fails, then we can't demarshal the request id
          safely.

        * tao/GIOP_Message_Generator_Parser.cpp (parse_reply):
          When the demarshaling of the request id failed then return with -1